--- a/Paup/Views/Oprema/MojeOpreme.cshtml
+++ b/Paup/Views/Oprema/MojeOpreme.cshtml
@@ -44,7 +44,7 @@ else
                     }
                     else if (oprema.VrstaPonude == VrstaPonude.Najam)
                     {
-                        @($"{oprema.CijenaNajma:0.00} €/dan")
+                        @($"{oprema.Cijena:0.00} €/dan")
                     }
                 </td>
                 <td>
