--- a/Paup/Views/Oprema/Popis.cshtml
+++ b/Paup/Views/Oprema/Popis.cshtml
@@ -28,7 +28,8 @@ else
                         }
                         else if (item.VrstaPonude == VrstaPonude.Najam)
                         {
-                            <p><strong>Najam:</strong> @item.CijenaNajma?.ToString("0.00") € / @item.NajamPo</p>
+                            <p><strong>Najam:</strong> @item.Cijena.ToString("0.00") € / @item.NajamPo</p>
+
                         }
 
                         <hr />
