--- a/Paup/Views/Account/Login.cshtml
+++ b/Paup/Views/Account/Login.cshtml
@@ -1,6 +1,7 @@
 @model LoginView
 
 <form asp-action="Login" method="post">
+    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
     <div class="form-group">
         <label asp-for="Email"></label>
@@ -15,9 +16,43 @@
     </div>
 
     <button type="submit" class="btn btn-primary">Prijavi se</button>
+
     <p class="mt-3">
         Nemate račun?
         <a asp-controller="Account" asp-action="Register">Registrirajte se</a>
     </p>
-
 </form>
+
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
+
+
+<script>
+    document.addEventListener("submit", function (e) {
+        document.querySelectorAll("input[type='text'], textarea").forEach(input => {
+            if (input.value) {
+                input.value = input.value.trim();
+            }
+        });
+    });
+
+    document.addEventListener("submit", function () {
+        document.querySelectorAll("input[type='text'], input[type='email'], textarea").forEach(input => {
+            if (input.value) {
+                input.value = input.value.trim();
+            }
+        });
+    });
+
+    $.validator.addMethod("notOnlySpaces", function (value, element) {
+        return this.optional(element) || $.trim(value).length > 0;
+    }, "Polje ne smije sadržavati samo razmake.");
+
+    $(function () {
+        $('input[name="Email"]').rules("add", { notOnlySpaces: true });
+        $('input[name="Password"]').rules("add", { notOnlySpaces: true });
+    });
+</script>
+
+
+}
