--- a/Paup/Views/Oprema/RedirectView.cshtml
+++ b/Paup/Views/Oprema/RedirectView.cshtml
@@ -4,7 +4,7 @@
 
 <div class="container text-center mt-5">
     <h2>Pristup nije dozvoljen</h2>
-    <p>Za slanje upita potrebno je biti registrirani korisnik.</p>
+    <p>Za pregled opreme potrebno je biti registrirani korisnik.</p>
 
     <div class="mt-4">
         <a class="btn btn-primary me-2" asp-controller="Account" asp-action="Register">Registriraj se</a>
